# piperx-pick-place

./: .gitignore  Dockerfile  README.md  compose.yaml  ros_entrypoint.sh
isaac_sim/: piper_scene.usd
src/piperx_control/: CMakeLists.txt  package.xml
src/piperx_control/include/piperx_sim_control/: piperx_sim_control.hpp
src/piperx_control/launch/: pick_place_sim.launch.py
src/piperx_control/src/: piperx_sim_control.cpp
src/piperx_perception/piperx_perception/: aruco_sim_detector.py
